# rust_llm_server

./: Cargo.toml  Dockerfile  package-lock.json
src/: main.rs  state.rs
src/models/: chat.rs  gemini.rs  mod.rs
src/routes/: chat.rs
src/services/: llm.rs
