[package]
name = "rust-llm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1.42"
tracing-subscriber = "0.3.21"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
